# cosmic-ext-alternative-startup

./: Cargo.toml  README.md  flake.nix  justfile
src/: main.rs  session.rs
